# flexi_logger

./: .gitignore  .markdownlint.json  .travis.yml  Backlog.txt  CHANGELOG.md  Cargo.toml  README.md  link_to_log  rustfmt.toml  testfile  testfile2
.github/workflows/: ci_test.yml
benches/: bench_dedup.rs  bench_no_dedup.rs  bench_reconfigurable.rs  bench_standard.rs
docs/: ComparisonWriteModesOnConsoleAndFile.xlsx  Threads in flexi_logger.md  diagrams.docx
examples/: append.rs  colors.rs  colors2.rs  dedup.rs  detailed_log_format.rs  entry_numbers.rs  example_security_logger.rs  filter.rs  multi_logger.rs  performance.rs  rotate.rs  rotate_custom_format.rs  rotation.rs  version_numbers.rs  write_writer.rs
reldoc/: search-index.js
reldoc/flexi_logger/: fn.default_format.html  fn.detailed_format.html  fn.init.html  index.html  sidebar-items.js  struct.FlexiLoggerError.html  struct.LogConfig.html  struct.LogRecord.html
reldoc/src/flexi_logger/: lib.rs.html
scripts/: check.rs  cleanup.rs  qclippy.rs  qualify.rs  qualify_fast.rs
src/: .markdownlint.json  code_examples.md  code_examples.rs  deduper.rs  default_log_writer.rs  default_writer.rs  deferred_now.rs  error_info.rs  errorinfo.rs  file_log_writer.rs  file_spec.rs  filter.rs  flexi_error.rs  flexi_logger.rs  flexi_writer.rs  formats.rs  lib.rs  log_config.rs  log_options.rs  log_specification.rs  log_writer.rs  logger.rs  logger_handle.rs  parameters.rs  primary_writer.rs  reconfiguration_handle.rs  threads.rs  trc.rs  util.rs  write_mode.rs  writers.rs
src/deprecated/: log_options.rs  mod.rs
src/deprecated1/: log_options.rs  mod.rs
src/parameters/: age.rs  cleanup.rs  criterion.rs  file_spec.rs  naming.rs
src/primary_writer/: multi_writer.rs  std_stream.rs  std_writer.rs  stderr_writer.rs  stdout_writer.rs  test_writer.rs
src/writers/: buffer_writer.rs  file_log_writer.rs  log_writer.rs  mod.rs  syslog.rs  syslog_writer.rs
src/writers/file_log_writer/: builder.rs  config.rs  infix_filter.rs  rotation_config.rs  state.rs  state_handle.rs  threads.rs
src/writers/file_log_writer/state/: list_and_cleanup.rs  numbers.rs  timestamps.rs
src/writers/syslog/: builder.rs  connection.rs  facility.rs  formats.rs  line.rs  severity.rs  syslog_connection.rs  writer.rs
tests/: bench_reconfigurable.rs  bench_standard.rs  ensure_visibility.rs  initialize_with_init.rs  initialize_with_logoptions.rs  initopts_default_files_dir.rs  initopts_default_files_dir_rot.rs  initopts_detailed_files_dscr.rs  initopts_detailed_files_rot.rs  initopts_env_logger_style.rs  initopts_multi_thread.rs  initopts_opt_files_dir_dscr.rs  initopts_opt_files_dir_dscr_rot.rs  logspec.toml  test_additonal_writers.rs  test_age_or_size.rs  test_buffer_writer.rs  test_cleanup_by_day_limit.rs  test_colors.rs  test_complex_style.rs  test_custom_log_writer.rs  test_custom_log_writer_format.rs  test_default_file_and_writer.rs  test_default_files_dir.rs  test_default_files_dir_rot.rs  test_detailed_files_dir.rs  test_detailed_files_dir_dscr.rs  test_detailed_files_dir_dscr_rot.rs  test_detailed_files_dir_rot.rs  test_detailed_files_dscr.rs  test_detailed_files_rot.rs  test_detailed_files_rot_timestamp.rs  test_env_logger_style.rs  test_error_channel.rs  test_error_channel_error.rs  test_external_delete.rs  test_external_file_remover.rs  test_external_file_rotator.rs  test_external_rename.rs  test_external_rotation_1.rs  (+39 more)
