[package]
name = "flexi_logger"
version = "0.27.4"
authors = ["emabee <meinolf.block@sap.com>"]
categories = ["development-tools::debugging"]
description = """
An easy-to-configure and flexible logger that writes logs to stderr or stdout and/or to files. \
It allows custom logline formats, and it allows changing the log specification at runtime. \
It also allows defining additional log streams, e.g. for alert or security messages.\
"""
documentation = "https://docs.rs/flexi_logger"
edition = "2021"
homepage = "https://crates.io/crates/flexi_logger"
keywords = ["file", "logger"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emabee/flexi_logger"
rust-version = "1.67.1"

[lib]
doctest = false

## docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# define the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["colors", "textfilter"]
async = ["dep:crossbeam-channel", "dep:crossbeam-queue"]
colors = ["dep:nu-ansi-term", "is-terminal"]
compress = ["dep:flate2"]
dont_minimize_extra_stacks = []
specfile = ["specfile_without_notification", "dep:notify-debouncer-mini"]
specfile_without_notification = ["dep:serde", "dep:toml", "dep:serde_derive"]
syslog_writer = ["dep:libc", "dep:hostname"]
textfilter = ["dep:regex"]
trc = ["async", "specfile", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
is-terminal = { version = "0.4", optional = true }
nu-ansi-term = { version = "0.49", optional = true }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
crossbeam-channel = { version = "0.5", optional = true }
crossbeam-queue = { version = "0.3", optional = true }
flate2 = { version = "1.0", optional = true }
glob = "0.3"
hostname = { version = "0.3", optional = true }
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
notify-debouncer-mini = { version = "0.3", optional = true, default-features = false }
regex = { version = "1.1", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
thiserror = "1.0"
toml = { version = "0.8", optional = true }
tracing = { version = "0.1.36", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [
    "env-filter",
] }

[target.'cfg(linux)'.dependencies]
libc = { version = "^0.2.50", optional = true }

[dev-dependencies]
either = "1.9"
flate2 = "1.0"
serde_derive = "1.0"
version-sync = "0.9"
tracing = "0.1.36"
#env_logger = '*' # optionally needed for the performance example
